--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./dist/js/server"
   },
   "dependencies": {
+    "bluebird": "^3.2.1",
     "express": "4.13.4"
   },
   "devDependencies": {
