--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "threerest",
   "version": "1.0.0",
-  "description": "Module de validation",
+  "description": "Module de developpement de services REST",
+  "repository" : {
+        "type" : "git",
+        "url" : "https://github.com/wmoulin/threerest.git"
+  },
+  "licenses" : "SEE LICENSE IN https://github.com/wmoulin/threerest/blob/master/LICENSE",
   "dependencies": {
     "bluebird": "^3.2.1",
     "express": "4.13.4",
