--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "path-to-regexp": "^1.2.1"
   },
   "devDependencies": {
+    "body-parser": "^1.17.2",
     "express": "4.13.4",
+    "multer": "^1.3.0",
     "supertest": "1.1.0"
   },
   "author": "wilfried Moulin",
