--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "threerest",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "Module de developpement de services REST",
   "repository": {
     "type": "git",
@@ -15,7 +15,10 @@
     "restful"
   ],
   "dependencies": {
+    "@types/express": "^4.0.36",
+    "@types/node": "^8.0.11",
     "bluebird": "^3.2.1",
+    "express": "4.15.3",
     "jsonwebtoken": "^7.4.1",
     "path-to-regexp": "^1.2.1"
   },
