--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@types/node": "^8.0.11",
     "bluebird": "^3.2.1",
     "express": "4.15.3",
-    "path-to-regexp": "^1.2.1"
+    "path-to-regexp": "^1.2.1",
+    "reflect-metadata": "^0.1.12"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.41",
